syntax = "proto3";

option go_package = "api/profile";

package profile;

service ProfileService {
  rpc GetProfile(GetProfileRequest) returns (ProfileResponse);
}

message GetProfileRequest {
  int64 user_id = 1;
}

message ProfileResponse {
  int64 user_id = 1;
  string full_name = 2;
  string email = 3;
  string avatar_url = 4;
  string provider = 5;
}